--- a/MMORPGClient.csproj
+++ b/MMORPGClient.csproj
@@ -113,6 +113,14 @@
     <Compile Include="Assets\FingerGestures\Toolbox\TBTap.cs" />
     <Compile Include="Assets\FingerGestures\Utils\GestureStateTracker.cs" />
     <Compile Include="Assets\FingerGestures\Utils\MoveToFinger.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\ChatManager.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\ChatParticipant.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\ColliderDisplayText.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\HUDRoot.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\LightFlicker.cs" />
+    <Compile Include="Assets\HUD Text\Examples\Scripts\Rotate.cs" />
+    <Compile Include="Assets\HUD Text\Scripts\HUDText.cs" />
+    <Compile Include="Assets\HUD Text\Scripts\UIFollowTarget.cs" />
     <Compile Include="Assets\NGUI\Examples\Scripts\InventorySystem\Game\EquipItems.cs" />
     <Compile Include="Assets\NGUI\Examples\Scripts\InventorySystem\Game\EquipRandomItem.cs" />
     <Compile Include="Assets\NGUI\Examples\Scripts\InventorySystem\Game\UICursor.cs" />
@@ -256,16 +264,33 @@
     <Compile Include="Assets\Script\Common\FingerEvent.cs" />
     <Compile Include="Assets\Script\Common\MeshRender\MeshLightmapSetting.cs" />
     <Compile Include="Assets\Script\Common\MeshRender\SerializedLightmapSetting.cs" />
+    <Compile Include="Assets\Script\MyScript\AboutMonster\MonsterCreateMachine.cs" />
     <Compile Include="Assets\Script\MyScript\Common\CameraCtrl.cs" />
     <Compile Include="Assets\Script\MyScript\Common\EnumDefine.cs" />
     <Compile Include="Assets\Script\MyScript\Common\GlobalInit.cs" />
     <Compile Include="Assets\Script\MyScript\Common\ResourcesMgr.cs" />
-    <Compile Include="Assets\Script\MyScript\Common\RoleCtrl.cs" />
     <Compile Include="Assets\Script\MyScript\Common\SceneMgr.cs" />
     <Compile Include="Assets\Script\MyScript\Core\Singleton.cs" />
     <Compile Include="Assets\Script\MyScript\Core\UIBase.cs" />
     <Compile Include="Assets\Script\MyScript\Core\UISceneBase.cs" />
     <Compile Include="Assets\Script\MyScript\Core\UIWindowBase.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\AI\IRoleAI.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\AI\RoleMainPlayerCityAI.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\AI\RoleMonsterAI.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\RoleFSMMgr.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateAbstract.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateAttack.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateDie.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateHurt.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateIdle.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateNone.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\FSM\State\RoleStateRun.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleCtrl.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleHeadBarCtr.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleInfo\RoleInfoBase.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleInfo\RoleInfoMainPlayer.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleInfo\RoleInfoMonster.cs" />
+    <Compile Include="Assets\Script\MyScript\Role\RoleMgr.cs" />
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\LayerUIMgr.cs" />
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\SceneStart\InitSceneStart.cs" />
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\SceneStart\LoaingSceneStart.cs" />
@@ -277,6 +302,7 @@
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\WindowUICtrl\WindowLogOnCtrl.cs" />
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\WindowUICtrl\WindowReigsterCtrl.cs" />
     <Compile Include="Assets\Script\MyScript\UI\Ctrl\WindowUICtrl\WindowRoleInfoCtrl.cs" />
+    <Compile Include="Assets\Script\MyScript\UI\Other\RoleHeadBarRoot.cs" />
     <Compile Include="Assets\Script\MyScript\UI\SceneUIMgr.cs" />
     <Compile Include="Assets\Script\MyScript\UI\WindowUIMgr.cs" />
     <Compile Include="Assets\Script\MyScript\Util\GameObjectUtil.cs" />
@@ -289,14 +315,11 @@
     <Compile Include="Assets\T4M\Scripts\T4MPlantObjSC.cs" />
     <Compile Include="Assets\T4M\Tutorial\Scripts\FlyCam.cs" />
     <Compile Include="Assets\T4M\Tutorial\Scripts\WaypointCam.cs" />
-    <Compile Include="Assets\UHUDText\Content\Script\Core\bl_HUDText.cs" />
-    <Compile Include="Assets\UHUDText\Content\Script\Core\bl_Text.cs" />
-    <Compile Include="Assets\UHUDText\Content\Script\Internal\Enum\bl_Guidance.cs" />
-    <Compile Include="Assets\UHUDText\Example\Script\bl_CameraOrbit.cs" />
-    <Compile Include="Assets\UHUDText\Example\Script\bl_ExampleUI.cs" />
-    <Compile Include="Assets\UHUDText\Example\Script\bl_TestMouseEvent.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\HUD Text\Examples\Atlases\Arimo20.txt" />
+    <None Include="Assets\HUD Text\Examples\Atlases\Large.txt" />
+    <None Include="Assets\HUD Text\ReadMe - 1.9.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Fantasy\Fantasy Font - Normal.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Refractive\Refractive Font - Header.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Refractive\Refractive Font - Normal.txt" />
